# ml-auto-tune

./: .gitignore  AGENTS.md  README.md  pyproject.toml
configs/: classification_example.yaml  example.yaml  research_example.yaml  research_program.md
configs/templates/: classification.yaml  regression.yaml
data/: sample_classification.csv  sample_regression.csv
src/ml_auto_tune/: __init__.py  __main__.py  advisor.py  autoresearch.py  cli.py  config.py  data.py  llm.py  models.py  sample_data.py  tuning.py
tests/: test_autoresearch.py  test_cli.py  test_config.py  test_llm.py  test_sample_data.py  test_tuning.py
