[project]
name = "ml-auto-tune"
version = "0.1.0"
description = "Auto-tune sklearn models with Optuna, optional LLM advice, and config-only autoresearch."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
    "joblib>=1.4",
    "numpy>=1.26",
    "optuna>=4.0",
    "pandas>=2.2",
    "pyyaml>=6.0",
    "scikit-learn>=1.5",
]

[project.scripts]
ml-auto-tune = "ml_auto_tune.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
testpaths = ["tests"]
